migrate from gin fw to chi router lib

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -7,7 +7,7 @@
 <main class="flex-shrink-0">
     <div class="container">
         <h1 class="mt-5">Hello {{ .framework }}!</h1>
-        <p class="lead text-primary">This a Cart Management Service </p>
+        <p class="lead text-primary">This is Splash Inventory Service </p>
     </div>
 </main>
 
